--- a/package.json
+++ b/package.json
@@ -4,21 +4,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
+    "dev:server": "node server.ts",
+    "sh": "sh script/generate-sitemap.sh",
+    "dev-demon": "cross-env NODE_ENV=production node server.ts",
+    "start-demon": "PORT=3000 NODE_ENV=production pm2 start npm --name 'admin' -- start",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3002",
+    "start:server": "node server.ts",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.0",
+    "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0",
+    "fs": "^0.0.1-security",
+    "globby": "^13.1.1",
+    "mongoose": "^6.2.1",
+    "mongoose-auto-increment": "^5.0.1",
+    "next": "12.1.10",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "recoil": "^0.6.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2"
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/node": "17.0.18",
+    "@types/react": "17.0.39",
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.10",
+    "nodemon": "^2.0.15",
+    "typescript": "4.5.5"
   }
 }
