--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
+    "clsx": "^1.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
