--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "framer-motion": "^6.2.8",
     "fs": "^0.0.1-security",
     "globby": "^13.1.1",
     "mongoose": "^6.2.1",
