--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
@@ -32,6 +33,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "recoil": "^0.6.1",
     "tailwindcss": "^3.0.23",
