--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "dev:server": "node server.ts",
+    "dev:server": "NODE_ENV=development node server.ts",
     "sh": "sh script/generate-sitemap.sh",
     "dev-demon": "cross-env NODE_ENV=production node server.ts",
     "start-demon": "PORT=3000 NODE_ENV=production pm2 start npm --name 'admin' -- start",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "start": "next start -p 3002",
-    "start:server": "node server.ts",
+    "start:server": "NODE_ENV=production node server.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,7 +28,7 @@
     "globby": "^13.1.1",
     "mongoose": "^6.1.4",
     "mongoose-auto-increment": "^5.0.1",
-    "next": "12.0.7",
+    "next": "12.1.0",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "react": "17.0.2",
