--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-json-pretty": "^2.2.0",
     "recoil": "^0.6.1",
     "tailwindcss": "^3.0.23",
     "zlib": "^1.0.5"
