--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "dev:server": "NODE_ENV=development node server.ts",
+    "dev:server": "PORT=3001 NODE_ENV=development node server.ts",
     "sh": "sh script/generate-sitemap.sh",
     "dev-demon": "cross-env NODE_ENV=production node server.ts",
     "start-demon": "PORT=3000 NODE_ENV=production pm2 start npm --name 'admin' -- start",
@@ -26,9 +26,11 @@
     "framer-motion": "^6.2.8",
     "fs": "^0.0.1-security",
     "globby": "^13.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "mongoose-auto-increment": "^5.0.1",
     "next": "12.1.0",
+    "next-auth": "^4.2.1",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "react": "17.0.2",
