--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^6.2.8",
     "fs": "^0.0.1-security",
     "globby": "^13.1.1",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "mongoose-auto-increment": "^5.0.1",
