--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.3.1",
     "react-json-pretty": "^2.2.0",
     "recoil": "^0.6.1",
+    "swr": "^1.2.2",
     "tailwindcss": "^3.0.23",
     "zlib": "^1.0.5"
   },
